--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(241, 90, 41, 0.8);
+  background-color: #f15a29;
   z-index: 3; }
 
 .popup {
