--- a/src/css/style.css
+++ b/src/css/style.css
@@ -172,6 +172,34 @@ button {
   letter-spacing: 4.38px;
   text-transform: uppercase; }
 
+.gallery {
+  margin-top: 119px; }
+
+.fotorama {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+
+.fotorama .fotorama__arr--prev {
+  background: url(../img/prev.png) no-repeat;
+  opacity: 0.6; }
+
+.fotorama .fotorama__arr--next {
+  background: url(../img/next.png) no-repeat;
+  opacity: 0.6; }
+
+.fotorama .fotorama__arr--prev:hover,
+.fotorama .fotorama__arr--next:hover {
+  opacity: 1; }
+
+.fotorama .fotorama__thumb-border {
+  border-color: #F15A29; }
+
 .services {
   margin-bottom: 68px; }
 
@@ -192,7 +220,11 @@ button {
   width: 570px; }
 
 .services-right {
-  max-width: 788px; }
+  max-width: 867px;
+  width: 100%; }
+
+.main-items {
+  margin-left: 167px; }
 
 .groups-title__up {
   position: absolute;
@@ -273,6 +305,87 @@ button {
 
 .excursion {
   margin-left: 7px; }
+
+.a-item__wrapper {
+  display: none;
+  position: relative;
+  bottom: 741px; }
+
+.a-item {
+  position: absolute;
+  max-width: 867px;
+  width: 100%;
+  padding-left: 54px;
+  padding-bottom: 186px;
+  background: url(../img/slide6.png);
+  -webkit-background-size: 100% 100%;
+          background-size: 100% 100%;
+  z-index: 0; }
+
+.a-item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, right top, left top, color-stop(1.75%, rgba(0, 0, 0, 0.2)), color-stop(97.66%, rgba(241, 90, 41, 0.8)));
+  background: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
+  background: -o-linear-gradient(right, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
+  background: linear-gradient(270deg, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
+  opacity: 1.9;
+  z-index: -1; }
+
+.a-item__title {
+  margin-top: 30px;
+  font-family: DINPro;
+  font-size: 28px;
+  line-height: 35px;
+  letter-spacing: 7.35px;
+  text-transform: uppercase;
+  color: #FFFFFF; }
+
+.a-item__description {
+  max-width: 584px;
+  width: 100%;
+  margin-top: 20px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 31px;
+  color: #FFFFFF; }
+
+.a-team__arrow {
+  cursor: pointer;
+  margin-top: 110px;
+  opacity: 0.6; }
+
+.a-team__arrow:hover {
+  opacity: 1; }
+
+.slideLeft {
+  animation-name: slideLeft;
+  -webkit-animation-name: slideLeft;
+  animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: ease-in-out;
+  visibility: visible !important; }
+
+@keyframes slideLeft {
+  0% {
+    -webkit-transform: translateX(150%);
+            transform: translateX(150%); }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%); } }
+
+@-webkit-keyframes slideLeft {
+  0% {
+    -webkit-transform: translateX(150%); }
+  100% {
+    -webkit-transform: translateX(0%); } }
 
 .contacts {
   margin-top: 175px;
@@ -453,7 +566,7 @@ input::placeholder {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(241, 90, 41, 0.8);
+  background-color: #f15a29;
   z-index: 3; }
 
 .popup {
