--- a/src/sass/popup.scss
+++ b/src/sass/popup.scss
@@ -5,12 +5,13 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(241, 90, 41, 0.8);
+  background-color: rgba(241, 90, 41, 1);
   z-index: 3;
   
 }
 
 .popup {
+  // border: 1px solid rgba(255, 255, 255, 0.9);
   position: fixed;
   z-index: 4;
   left: 50%;
