--- a/src/sass/services.scss
+++ b/src/sass/services.scss
@@ -13,8 +13,13 @@
 }
 
 .services-right {
-	max-width: 788px;
+	max-width: 867px;
+	width: 100%;
 	// margin-left: 290px;
+}
+
+.main-items {
+	margin-left: 167px;
 }
 
 .groups-title__up {
@@ -109,4 +114,106 @@
 .excursion {
 	margin-left: 7px;
 }
+
+.a-item__wrapper {
+	display: none;
+	position: relative;
+	bottom: 741px;
+	// right: -270px;
+
+}
+
+.a-item {
+	position: absolute;
+	max-width: 867px;
+	width: 100%;
+	padding-left: 54px;
+	// padding-top: 148px;
+	padding-bottom: 186px;
+	background: url(../img/slide6.png);
+	background-size: 100% 100%;
+	z-index: 0;
+}
+
+.a-item::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(270deg, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
+	opacity: 1.9;
+	z-index: -1;
+}
+
+.a-item__title {
+	margin-top: 30px;
+	font-family: DINPro;
+	font-size: 28px;
+	line-height: 35px;
+	letter-spacing: 7.35px;
+	text-transform: uppercase;
+	color: #FFFFFF;
+}
+
+.a-item__description {
+	max-width: 584px;
+	width: 100%;
+	margin-top: 20px;
+	font-family: Montserrat;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 31px;
+	color: #FFFFFF;
+
+}
+
+.a-team__arrow {
+	cursor: pointer;
+	margin-top: 110px;
+	opacity: 0.6;
+}
+.a-team__arrow:hover {
+	opacity: 1;
+}
+
+.slideLeft {
+	animation-name: slideLeft;
+	-webkit-animation-name: slideLeft;
+
+	animation-duration: 1s;
+	-webkit-animation-duration: 1s;
+
+	animation-timing-function: ease-in-out;
+	-webkit-animation-timing-function: ease-in-out;
+
+	visibility: visible !important;
+}
+
+@keyframes slideLeft {
+	0% {
+		transform: translateX(150%);
+	}
+
+
+	100% {
+		transform: translateX(0%);
+	}
+}
+
+@-webkit-keyframes slideLeft {
+	0% {
+		-webkit-transform: translateX(150%);
+	}
+
+
+	100% {
+		-webkit-transform: translateX(0%);
+	}
+}
+
+
+
 
