--- a/src/sass/services.scss
+++ b/src/sass/services.scss
@@ -1,11 +1,11 @@
 .services{
-	margin-bottom: 68px;
+	// height: 100vh;
 }
 .services-wrapper {
 	display: flex;
 	justify-content: flex-start;
 	margin-left: 123px;
-	margin-top: 143px;
+	margin-top: 60px;
 }
 .services-left {
 	position: relative;
