--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,13 +12,15 @@ header {
 	cursor: pointer;
 	padding-top: 15px;
 	margin-left: 8px;
+	z-index: 100;
 }
 
 .main-nav {
 	width: 100%;
 	display: flex;
 	position: fixed;
-	margin-left: 8px;
+	// background: black;
+	// margin-left: 8px;
 	z-index: 1;
 }
 
@@ -31,6 +33,7 @@ header {
 	align-items: center;
 	color: #ffffff
 }
+
 
 // .logo {
 // 	position: absolute;
@@ -61,6 +64,35 @@ header {
 }
 .main-nav__li:hover:after {
 	width: 100%;
+}
+
+// .another {
+// 	top: -100px;
+// }
+
+.another li {
+	color: black;
+}
+
+.another li:after {
+	background-color: #F15A29;
+}
+
+
+
+.another-transparent {
+	background-color: transparent;
+}
+
+.logo-first {
+	background: url('../img/logo.png') center no-repeat;
+	width: 60px;
+	height: 60px;
+}
+.another-logo {
+	background: url('../img/logo_orange.png') center no-repeat;
+	
+
 }
 
 
@@ -118,31 +150,35 @@ header {
 	background: rgba(255, 255, 255, 0.1);
 }
 
-.slider-dots {
-	// text-align: -webkit-right;
-	margin: auto 41px;
-	position: fixed;
-	top: 300px;
-	right: 0px;
-	// display: flex;
-	// justify-content: flex-end;
-	// flex-direction: column;
-}
+// .slider-dots {
+// 	// text-align: -webkit-right;
+// 	margin: auto 41px;
+// 	position: fixed;
+// 	top: 300px;
+// 	right: 0px;
+// 	// display: flex;
+// 	// justify-content: flex-end;
+// 	// flex-direction: column;
+// }
 
-.dot {
-	cursor: pointer;
-	margin-top: 15px;
-	height: 8px;
-	width: 8px;
-	background-color: #ffffff;
-	mix-blend-mode: normal;
-	opacity: 0.4;
-	border-radius: 50%;
-	-webkit-transition: background-color 0.6s ease;
-	transition: background-color 0.6s ease;
-}
+// .dot {
+// 	cursor: pointer;
+// 	margin-top: 15px;
+// 	height: 8px;
+// 	width: 8px;
+// 	background-color: #ffffff;
+// 	mix-blend-mode: normal;
+// 	opacity: 0.4;
+// 	border-radius: 50%;
+// 	-webkit-transition: background-color 0.6s ease;
+// 	transition: background-color 0.6s ease;
+// }
 
-.dot-active {
-	background-color: #ffffff;
+// .dot-active {
+// 	background-color: #ffffff;
+// 	opacity: 1;
+// }
+
+#fullpage #fp-nav {
 	opacity: 1;
 }
