--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,6 +70,11 @@ header {
 .another-transparent {
   background-color: transparent; }
 
+.logo a {
+  display: block;
+  width: 100%;
+  height: 100%; }
+
 .logo-first {
   background: url("../img/logo.png") center no-repeat;
   width: 60px;
