--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,11 @@ header {
 .another-transparent {
   background-color: transparent; }
 
+.logo a {
+  display: block;
+  width: 100%;
+  height: 100%; }
+
 .logo-first {
   background: url("../img/logo.png") center no-repeat;
   width: 60px;
@@ -314,7 +319,7 @@ button {
   background: url(../img/slide6.png);
   -webkit-background-size: 100% 100%;
           background-size: 100% 100%;
-  z-index: 0; }
+  z-index: 1; }
 
 .a-item::after {
   content: "";
@@ -458,8 +463,8 @@ footer {
 
 .club-form {
   max-width: 319px;
-  padding-top: 145px;
-  padding-bottom: 153px;
+  padding-top: 100px;
+  padding-bottom: 39px;
   margin-left: 211px; }
 
 .club-form__title {
@@ -537,19 +542,19 @@ input::placeholder {
   width: 100%; }
 
 .info {
-  margin-top: 32px;
+  margin-top: 16px;
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
-  line-height: 21px;
+  line-height: 17px;
   color: #FFFFFF; }
 
 .footer-img {
-  height: 830px;
+  height: 700px;
   position: absolute;
-  top: 115px;
-  right: 109px; }
+  top: 50px;
+  right: 160px; }
 
 .footer-img img {
   height: 100%; }
