--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -84,6 +84,13 @@ header {
 	background-color: transparent;
 }
 
+
+.logo a {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
 .logo-first {
 	background: url('../img/logo.png') center no-repeat;
 	width: 60px;
@@ -91,8 +98,6 @@ header {
 }
 .another-logo {
 	background: url('../img/logo_orange.png') center no-repeat;
-	
-
 }
 
 
