--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,8 +4,8 @@ footer {
 
 .club-form {
   max-width: 319px;
-  padding-top: 100px;
-  padding-bottom: 39px;
+  padding-top: 120px;
+  padding-bottom: 220px;
   margin-left: 211px; }
 
 .club-form__title {
@@ -92,10 +92,28 @@ input::placeholder {
   color: #FFFFFF; }
 
 .footer-img {
-  height: 700px;
+  height: 800px;
   position: absolute;
-  top: 50px;
+  top: 151px;
   right: 160px; }
 
 .footer-img img {
   height: 100%; }
+
+@media (max-width: 1284px) {
+  .club-form {
+    margin-left: 100px; } }
+
+@media (max-width: 1024px) {
+  .footer-img {
+    display: none; }
+  .club-form {
+    margin: auto; } }
+
+@media (max-width: 576px) {
+  .club-form__title {
+    font-size: 33px;
+    line-height: 40px;
+    padding-left: 17px; }
+  .club-form__subtitle {
+    padding-left: 17px; } }
