--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -2,23 +2,46 @@
   margin-top: 25px; }
 
 .fotorama {
+  width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  margin-left: 430px;
   margin-top: 30px; }
+
+.fotorama .fotorama__stage__frame {
+  left: -20px; }
+
+.fotorama .fotorama-img {
+  left: 10%; }
+
+.fotorama .fotorama__nav.fotorama__shadows--right:after,
+.fotorama .fotorama__stage.fotorama__shadows--right:after {
+  display: none; }
+
+.fotorama .fotorama__nav:after,
+.fotorama .fotorama__stage:after {
+  display: none; }
+
+.fotorama .fotorama__stage {
+  overflow: visible; }
+
+.fotorama .fotorama__arr,
+.fotorama .fotorama__fullscreen-icon,
+.fotorama .fotorama__nav,
+.fotorama .fotorama__nav__frame,
+.fotorama .fotorama__nav__shaft {
+  overflow: visible; }
 
 .fotorama .fotorama__arr--prev {
   background: url(../img/prev.png) no-repeat;
-  opacity: 0.6; }
+  opacity: 0.3; }
 
 .fotorama .fotorama__arr--next {
   background: url(../img/next.png) no-repeat;
-  opacity: 0.6; }
+  opacity: 0.3;
+  right: -138px; }
 
 .fotorama .fotorama__arr--prev:hover,
 .fotorama .fotorama__arr--next:hover {
