--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,3 +1,6 @@
+#section2 {
+  position: relative; }
+
 .services-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -102,19 +105,29 @@
   margin-left: 7px; }
 
 .a-item__wrapper {
-  display: none;
-  position: relative;
-  bottom: 741px; }
+  position: fixed;
+  width: 60%;
+  height: 100%;
+  display: block;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  z-index: 1; }
 
 .a-item {
-  position: absolute;
-  max-width: 867px;
-  width: 100%;
+  position: relative;
+  height: 100%;
   padding-left: 54px;
-  padding-bottom: 186px;
-  background: url(../img/slide6.png);
-  -webkit-background-size: 100% 100%;
-          background-size: 100% 100%;
+  background: -webkit-gradient(linear, right top, left top, color-stop(1.75%, black), color-stop(97.66%, #f15a29));
+  background: -webkit-linear-gradient(right, black 1.75%, #f15a29 97.66%);
+  background: -o-linear-gradient(right, black 1.75%, #f15a29 97.66%);
+  background: linear-gradient(270deg, black 1.75%, #f15a29 97.66%);
+  padding-top: 70px;
   z-index: 1; }
 
 .a-item::after {
@@ -124,11 +137,6 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, right top, left top, color-stop(1.75%, rgba(0, 0, 0, 0.2)), color-stop(97.66%, rgba(241, 90, 41, 0.8)));
-  background: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
-  background: -o-linear-gradient(right, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
-  background: linear-gradient(270deg, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
-  opacity: 1.9;
   z-index: -1; }
 
 .a-item__title {
@@ -143,6 +151,7 @@
 .a-item__description {
   max-width: 584px;
   width: 100%;
+  min-height: 300px;
   margin-top: 20px;
   font-family: Montserrat;
   font-style: normal;
@@ -151,33 +160,69 @@
   line-height: 31px;
   color: #FFFFFF; }
 
+.join-items {
+  color: #ffffff;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-border-radius: 3px;
+          border-radius: 3px; }
+
 .a-team__arrow {
   cursor: pointer;
-  margin-top: 110px;
   opacity: 0.6; }
 
 .a-team__arrow:hover {
   opacity: 1; }
 
 .slideLeft {
-  animation-name: slideLeft;
-  -webkit-animation-name: slideLeft;
-  animation-duration: 1s;
-  -webkit-animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-timing-function: ease-in-out;
-  visibility: visible !important; }
+  -webkit-transform: translateX(0%);
+      -ms-transform: translateX(0%);
+          transform: translateX(0%); }
 
-@keyframes slideLeft {
-  0% {
-    -webkit-transform: translateX(150%);
-            transform: translateX(150%); }
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%); } }
+@media (max-width: 1024px) {
+  .join-services {
+    margin-top: 28px; }
+  .excursion {
+    margin-left: 0; }
+  .excursion-services {
+    margin-top: 28px; } }
 
-@-webkit-keyframes slideLeft {
-  0% {
-    -webkit-transform: translateX(150%); }
-  100% {
-    -webkit-transform: translateX(0%); } }
+@media (max-width: 767px) {
+  .main-items {
+    margin-left: 38px; }
+  .a-item__wrapper {
+    width: 100%; } }
+
+@media (max-width: 576px) {
+  .services-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 17px; }
+  .services-left {
+    width: 100%; }
+  .services-right {
+    margin-top: 63px; }
+  .groups-title__up {
+    left: 13px;
+    font-size: 40px; }
+  .gym-title__down {
+    left: 13px;
+    font-size: 40px; }
+  .item-title {
+    font-size: 22px;
+    line-height: 30px; }
+  .join-items {
+    margin-top: 0; }
+  .excursion {
+    margin-top: 25px; } }
+
+@media (max-width: 424px) {
+  .groups-title__up {
+    left: -13px;
+    font-size: 30px; }
+  .gym-title__down {
+    left: -13px;
+    font-size: 30px; } }
