--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,67 @@
+.menu-btn {
+  cursor: pointer;
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  border: 1px solid #F15A29; }
+
+.menu_active {
+  -webkit-transform: translateX(0%) !important;
+      -ms-transform: translateX(0%) !important;
+          transform: translateX(0%) !important; }
+
+.menu-btn span,
+.menu-btn span::before,
+.menu-btn span::after {
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  left: 50%;
+  margin-left: -10px;
+  width: 20px;
+  height: 2px;
+  background-color: #222; }
+
+.menu-btn span::before,
+.menu-btn span::after {
+  content: '';
+  display: block;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
+.menu-btn span::before {
+  -webkit-transform: translateY(-5px);
+      -ms-transform: translateY(-5px);
+          transform: translateY(-5px); }
+
+.menu-btn span::after {
+  -webkit-transform: translateY(5px);
+      -ms-transform: translateY(5px);
+          transform: translateY(5px); }
+
+.menu-btn_active span {
+  height: 0; }
+
+.menu-btn_active span:before {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg); }
+
+.menu-btn_active span:after {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg); }
+
 .main {
+  position: relative;
   background: #F15A29;
   min-height: 100vh; }
 
@@ -6,10 +69,12 @@ header {
   position: relative; }
 
 .logo {
-  max-width: 44px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 60px;
   cursor: pointer;
-  padding-top: 15px;
-  margin-left: 8px;
   z-index: 100; }
 
 .main-nav {
@@ -22,18 +87,18 @@ header {
   z-index: 1; }
 
 .main-nav__ul {
-  width: 93%;
+  width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  top: 8px;
-  left: 0;
+  padding: 18px;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+  top: 8px;
   color: #ffffff; }
 
 .main-nav__li {
@@ -62,13 +127,19 @@ header {
   width: 100%; }
 
 .another li {
-  color: black; }
+  color: black;
+  -webkit-transition: 2s;
+  -o-transition: 2s;
+  transition: 2s; }
 
 .another li:after {
   background-color: #F15A29; }
 
-.another-transparent {
-  background-color: transparent; }
+.another-white {
+  color: white;
+  -webkit-transition: 2s;
+  -o-transition: 2s;
+  transition: 2s; }
 
 .logo a {
   display: block;
@@ -78,10 +149,16 @@ header {
 .logo-first {
   background: url("../img/logo.png") center no-repeat;
   width: 60px;
-  height: 60px; }
+  height: 60px;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s; }
 
 .another-logo {
-  background: url("../img/logo_orange.png") center no-repeat; }
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  background: url("../img/logo_orange.png") center no-repeat !important; }
 
 .main-content {
   display: -webkit-box;
@@ -115,7 +192,7 @@ header {
 .main-content__right {
   position: absolute;
   top: 50px;
-  right: 170px; }
+  right: 220px; }
   .main-content__right img {
     max-width: 480px;
     width: 100%; }
@@ -128,8 +205,79 @@ header {
 .join:hover {
   background: rgba(255, 255, 255, 0.1); }
 
-#fullpage #fp-nav {
-  opacity: 1; }
+@media (max-width: 1284px) {
+  .main-content {
+    margin-left: 100px; }
+  .main-content__right {
+    right: 111px; } }
+
+@media (max-width: 1024px) {
+  .main-nav__ul {
+    margin-left: 17px; } }
+
+@media (max-width: 991px) {
+  .main-content__right {
+    display: none; }
+  .main-content {
+    padding-top: 146px; }
+  .main-nav__li {
+    font-size: 9px; }
+  .main-nav__li {
+    margin-left: 30px; } }
+
+@media (max-width: 767px) {
+  .menu-btn {
+    display: block; }
+  .main-nav__ul {
+    position: fixed;
+    top: 0;
+    margin-left: 0;
+    height: 100vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    background: #F15A29;
+    -webkit-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s; }
+  .main-nav__li {
+    margin-left: 0;
+    font-size: 12px; }
+  .main-nav__ul li {
+    margin-left: 0; }
+  .logo-first {
+    background: url("../img/logo.png") center no-repeat;
+    width: 60px;
+    height: 60px;
+    -webkit-transition: 2s;
+    -o-transition: 2s;
+    transition: 2s; }
+  .main-content {
+    margin-left: 41px;
+    padding-top: 107px; }
+  .main-name {
+    font-size: 40px; } }
+
+@media (max-width: 576px) {
+  .main-content {
+    margin-left: 14px; }
+  .main-name {
+    letter-spacing: 5.8333px;
+    font-size: 30px; } }
+
+@media (max-width: 424px) {
+  .main-title {
+    font-size: 22px; }
+  .main-name {
+    font-size: 25px; } }
 
 @font-face {
   font-family: 'DINProBlack';
@@ -177,23 +325,46 @@ button {
   margin-top: 25px; }
 
 .fotorama {
+  width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  margin-left: 430px;
   margin-top: 30px; }
+
+.fotorama .fotorama__stage__frame {
+  left: -20px; }
+
+.fotorama .fotorama-img {
+  left: 10%; }
+
+.fotorama .fotorama__nav.fotorama__shadows--right:after,
+.fotorama .fotorama__stage.fotorama__shadows--right:after {
+  display: none; }
+
+.fotorama .fotorama__nav:after,
+.fotorama .fotorama__stage:after {
+  display: none; }
+
+.fotorama .fotorama__stage {
+  overflow: visible; }
+
+.fotorama .fotorama__arr,
+.fotorama .fotorama__fullscreen-icon,
+.fotorama .fotorama__nav,
+.fotorama .fotorama__nav__frame,
+.fotorama .fotorama__nav__shaft {
+  overflow: visible; }
 
 .fotorama .fotorama__arr--prev {
   background: url(../img/prev.png) no-repeat;
-  opacity: 0.6; }
+  opacity: 0.3; }
 
 .fotorama .fotorama__arr--next {
   background: url(../img/next.png) no-repeat;
-  opacity: 0.6; }
+  opacity: 0.3;
+  right: -138px; }
 
 .fotorama .fotorama__arr--prev:hover,
 .fotorama .fotorama__arr--next:hover {
@@ -201,6 +372,9 @@ button {
 
 .fotorama .fotorama__thumb-border {
   border-color: #F15A29; }
+
+#section2 {
+  position: relative; }
 
 .services-wrapper {
   display: -webkit-box;
@@ -306,19 +480,29 @@ button {
   margin-left: 7px; }
 
 .a-item__wrapper {
-  display: none;
-  position: relative;
-  bottom: 741px; }
+  position: fixed;
+  width: 60%;
+  height: 100%;
+  display: block;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  z-index: 1; }
 
 .a-item {
-  position: absolute;
-  max-width: 867px;
-  width: 100%;
+  position: relative;
+  height: 100%;
   padding-left: 54px;
-  padding-bottom: 186px;
-  background: url(../img/slide6.png);
-  -webkit-background-size: 100% 100%;
-          background-size: 100% 100%;
+  background: -webkit-gradient(linear, right top, left top, color-stop(1.75%, black), color-stop(97.66%, #f15a29));
+  background: -webkit-linear-gradient(right, black 1.75%, #f15a29 97.66%);
+  background: -o-linear-gradient(right, black 1.75%, #f15a29 97.66%);
+  background: linear-gradient(270deg, black 1.75%, #f15a29 97.66%);
+  padding-top: 70px;
   z-index: 1; }
 
 .a-item::after {
@@ -328,11 +512,6 @@ button {
   right: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, right top, left top, color-stop(1.75%, rgba(0, 0, 0, 0.2)), color-stop(97.66%, rgba(241, 90, 41, 0.8)));
-  background: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
-  background: -o-linear-gradient(right, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
-  background: linear-gradient(270deg, rgba(0, 0, 0, 0.2) 1.75%, rgba(241, 90, 41, 0.8) 97.66%);
-  opacity: 1.9;
   z-index: -1; }
 
 .a-item__title {
@@ -347,6 +526,7 @@ button {
 .a-item__description {
   max-width: 584px;
   width: 100%;
+  min-height: 300px;
   margin-top: 20px;
   font-family: Montserrat;
   font-style: normal;
@@ -355,36 +535,72 @@ button {
   line-height: 31px;
   color: #FFFFFF; }
 
+.join-items {
+  color: #ffffff;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-border-radius: 3px;
+          border-radius: 3px; }
+
 .a-team__arrow {
   cursor: pointer;
-  margin-top: 110px;
   opacity: 0.6; }
 
 .a-team__arrow:hover {
   opacity: 1; }
 
 .slideLeft {
-  animation-name: slideLeft;
-  -webkit-animation-name: slideLeft;
-  animation-duration: 1s;
-  -webkit-animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-timing-function: ease-in-out;
-  visibility: visible !important; }
+  -webkit-transform: translateX(0%);
+      -ms-transform: translateX(0%);
+          transform: translateX(0%); }
 
-@keyframes slideLeft {
-  0% {
-    -webkit-transform: translateX(150%);
-            transform: translateX(150%); }
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%); } }
+@media (max-width: 1024px) {
+  .join-services {
+    margin-top: 28px; }
+  .excursion {
+    margin-left: 0; }
+  .excursion-services {
+    margin-top: 28px; } }
 
-@-webkit-keyframes slideLeft {
-  0% {
-    -webkit-transform: translateX(150%); }
-  100% {
-    -webkit-transform: translateX(0%); } }
+@media (max-width: 767px) {
+  .main-items {
+    margin-left: 38px; }
+  .a-item__wrapper {
+    width: 100%; } }
+
+@media (max-width: 576px) {
+  .services-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 17px; }
+  .services-left {
+    width: 100%; }
+  .services-right {
+    margin-top: 63px; }
+  .groups-title__up {
+    left: 13px;
+    font-size: 40px; }
+  .gym-title__down {
+    left: 13px;
+    font-size: 40px; }
+  .item-title {
+    font-size: 22px;
+    line-height: 30px; }
+  .join-items {
+    margin-top: 0; }
+  .excursion {
+    margin-top: 25px; } }
+
+@media (max-width: 424px) {
+  .groups-title__up {
+    left: -13px;
+    font-size: 30px; }
+  .gym-title__down {
+    left: -13px;
+    font-size: 30px; } }
 
 .contacts {
   margin-bottom: 50px; }
@@ -457,14 +673,24 @@ button {
 .social-map:hover {
   color: #F15A29; }
 
+@media (max-width: 767px) {
+  .contacts-wrapper {
+    margin-left: 150px; }
+  .contacts-worktime__wrapper {
+    margin-left: 0; } }
+
+@media (max-width: 576px) {
+  .contacts-wrapper {
+    margin-left: 52px; } }
+
 footer {
   background: #F15A29;
   position: relative; }
 
 .club-form {
   max-width: 319px;
-  padding-top: 100px;
-  padding-bottom: 39px;
+  padding-top: 120px;
+  padding-bottom: 220px;
   margin-left: 211px; }
 
 .club-form__title {
@@ -551,16 +777,34 @@ input::placeholder {
   color: #FFFFFF; }
 
 .footer-img {
-  height: 700px;
+  height: 800px;
   position: absolute;
-  top: 50px;
+  top: 151px;
   right: 160px; }
 
 .footer-img img {
   height: 100%; }
 
+@media (max-width: 1284px) {
+  .club-form {
+    margin-left: 100px; } }
+
+@media (max-width: 1024px) {
+  .footer-img {
+    display: none; }
+  .club-form {
+    margin: auto; } }
+
+@media (max-width: 576px) {
+  .club-form__title {
+    font-size: 33px;
+    line-height: 40px;
+    padding-left: 17px; }
+  .club-form__subtitle {
+    padding-left: 17px; } }
+
 .overlay {
-  position: fixed;
+  position: absolute;
   display: none;
   top: 0;
   width: 100%;
@@ -639,3 +883,36 @@ input::placeholder {
   to {
     -webkit-box-shadow: 0 0 60px #c78030;
             box-shadow: 0 0 60px #c78030; } }
+
+.panorama-main {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/pano4.jpg);
+  -webkit-background-size: 100% 100%;
+          background-size: 100% 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  overflow-x: visible; }
+
+.panorama-gyms {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/pano5.jpg);
+  -webkit-background-size: 100% 100%;
+          background-size: 100% 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  overflow-x: visible; }
+
+.panorama-close {
+  position: absolute;
+  right: 30px;
+  top: 0px;
+  cursor: pointer;
+  font-size: 35px;
+  color: black;
+  font-weight: 300; }
