--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,69 @@
+.menu-btn {
+	cursor: pointer;
+	display: none;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	z-index: 1;
+	width: 50px;
+	height: 50px;
+	background-color: #fff;
+	border-radius: 50%;
+	border: 1px solid #F15A29;
+}
+
+
+
+.menu_active {
+	transform: translateX(0%)!important;
+}
+
+.menu-btn span,
+.menu-btn span::before,
+.menu-btn span::after {
+	position: absolute;
+	top: 50%;
+	margin-top: -1px;
+	left: 50%;
+	margin-left: -10px;
+	width: 20px;
+	height: 2px;
+	background-color: #222;
+}
+
+.menu-btn span::before,
+.menu-btn span::after {
+	content: '';
+	display: block;
+	transition: 0.5s;
+}
+
+.menu-btn span::before {
+	transform: translateY(-5px);
+}
+
+.menu-btn span::after {
+	transform: translateY(5px);
+}
+
+
+
+.menu-btn_active span {
+	height: 0;
+}
+
+.menu-btn_active span:before {
+	transform: rotate(45deg);
+
+}
+
+.menu-btn_active span:after {
+	transform: rotate(-45deg);
+	
+}
+
 .main {
+	position: relative;
 	background: #F15A29;
 	// min-height: 900px;
 	min-height: 100vh;
@@ -8,10 +73,13 @@ header {
 }
 
 .logo {
-	max-width: 44px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 60px;
+	height: 60px;
 	cursor: pointer;
-	padding-top: 15px;
-	margin-left: 8px;
+	
 	z-index: 100;
 }
 
@@ -19,18 +87,20 @@ header {
 	width: 100%;
 	display: flex;
 	position: fixed;
+
 	// background: black;
 	// margin-left: 8px;
 	z-index: 1;
 }
 
 .main-nav__ul {
-	width: 93%;
+	width: 100%;
 	display: flex;
+	padding: 18px;
+	align-items: center;
 	position: relative;
 	top: 8px;
-	left: 0;
-	align-items: center;
+	
 	color: #ffffff
 }
 
@@ -72,17 +142,23 @@ header {
 
 .another li {
 	color: black;
+	transition: 2s;
 }
 
 .another li:after {
 	background-color: #F15A29;
 }
 
-
-
-.another-transparent {
-	background-color: transparent;
+.another-white {
+	color: white;
+	transition: 2s;
 }
+
+
+
+// .another-transparent {
+// 	background-color: transparent;
+// }
 
 
 .logo a {
@@ -95,9 +171,12 @@ header {
 	background: url('../img/logo.png') center no-repeat;
 	width: 60px;
 	height: 60px;
+	transition: 1s;
 }
 .another-logo {
-	background: url('../img/logo_orange.png') center no-repeat;
+	transition: 1s;
+	background: url('../img/logo_orange.png') center no-repeat !important;
+	
 }
 
 
@@ -138,7 +217,7 @@ header {
 .main-content__right {
 	position: absolute;
 	top: 50px;
-	right: 170px;
+	right: 220px;
 	img {
 		max-width: 480px;
 		width: 100%;
@@ -184,6 +263,105 @@ header {
 // 	opacity: 1;
 // }
 
-#fullpage #fp-nav {
-	opacity: 1;
+// #fullpage #fp-nav {
+// 	opacity: 1;
+// }
+
+@media (max-width: 1284px) {
+	.main-content {
+		margin-left: 100px;
+	}
+	.main-content__right {
+		right: 111px;
+	}
+}
+
+
+@media (max-width: 1024px) {
+	.main-nav__ul {
+		margin-left: 17px;
+	}
+}
+
+
+@media (max-width: 991px) {
+	.main-content__right {
+		display: none;
+	}
+	
+	.main-content {
+		padding-top: 146px;
+	}
+	.main-nav__li {
+		font-size: 9px;
+	}
+	.main-nav__li {
+		margin-left: 30px;
+	}
+}
+
+
+@media (max-width: 767px) {
+	.menu-btn {
+		display: block;
+	}
+	
+	.main-nav__ul {
+		position: fixed;
+		top: 0;
+		margin-left: 0;
+		height: 100vh;
+		flex-direction: column;
+		justify-content: space-around;
+		background: #F15A29;
+		transform: translateX(100%);
+		transition: 1s;
+		
+	}
+
+	.main-nav__li {
+		margin-left: 0;
+		font-size: 12px;
+	}
+	.main-nav__ul li {
+		margin-left: 0;
+	}
+
+	.logo-first {
+		background: url('../img/logo.png') center no-repeat;
+		width: 60px;
+		height: 60px;
+		transition: 2s;
+	}
+
+	.main-content {
+		margin-left: 41px;
+		padding-top: 107px;
+	}
+	.main-name {
+		font-size: 40px;
+	}
+	
+}
+
+
+@media (max-width: 576px) {
+	.main-content {
+		margin-left: 14px;
+	}
+	.main-name {
+		letter-spacing: 5.8333px;
+		font-size: 30px;
+	}
+}
+
+
+
+@media (max-width: 424px) {
+	.main-title{
+		font-size: 22px;
+	}
+	.main-name {
+		font-size: 25px;
+	}
 }
