--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,1 +1,1 @@
-@import 'main', 'fonts', 'reset', 'gallery', 'services', 'contacts', 'footer', 'popup', 'media';
+@import 'main', 'fonts', 'reset', 'gallery', 'services', 'contacts', 'footer', 'popup', 'panorama';
